Fix main page gallery on mobile

--- a/Appropedia.less
+++ b/Appropedia.less
@@ -66,6 +66,10 @@ blockquote {
 	#mw-content-text .gallerybox {
 		width: 49% !important;
 	}
+	#mw-content-text .gallerybox div,
+	#mw-content-text .gallerybox img {
+		width: 100% !important;
+	}
 }
 
 /**
